test/error/patternindex.luau
print(string.match("test", "test%4"))
